test/zinc_source/compile_errors/functions/22_ufcs_missing_remaining_arg.zn
// expected-error: missing required argument 'y'

fn pair(x: i64, y) {
    return x + y
}

fn main() {
    value = 1
    print(value.pair())
}
